--- a/app/src/main/res/layout/weather_list_item.xml
+++ b/app/src/main/res/layout/weather_list_item.xml
@@ -21,15 +21,24 @@
             android:orientation="horizontal"
             >
 
+
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/temp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:textColor="@color/blue_dark"
+                android:textSize="25sp"
+                android:textStyle="bold" />
+
+            <androidx.appcompat.widget.AppCompatTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="start"
                 android:text="@string/degree_symbol"
                 android:layout_weight="1"
                 android:textColor="@color/blue_dark"
-                android:textSize="19sp"
+                android:textSize="25sp"
                 android:textStyle="bold" />
 
 
@@ -48,11 +57,21 @@
         </androidx.appcompat.widget.LinearLayoutCompat>
 
 
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:textColor="@color/blue_dark"
+            android:layout_marginBottom="8dp"
+            android:layout_marginStart="8dp"
+            android:textSize="19sp"
+            android:textStyle="bold" />
+
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="20dp"
             >
 
             <androidx.appcompat.widget.AppCompatTextView
@@ -62,6 +81,7 @@
                 android:text="@string/date"
                 android:textColor="@color/blue_light"
                 android:textSize="15sp"
+                android:layout_marginStart="8dp"
                 />
 
             <androidx.appcompat.widget.AppCompatTextView
